--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,7 +21,11 @@
             <artifactId>com.blog.service</artifactId>
             <groupId>com.blog</groupId>
         </dependency>
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
